// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should react to an action with the type contact/CHANGE_CONTACT_FORM 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "form": "foo",
  },
}
`;

exports[`reducer should return the current state if contact/CHANGE_CONTACT_FORM payload is empty 1`] = `
Object {
  "meta": Object {
    "isInitial": false,
  },
  "payload": Object {
    "form": Object {},
  },
}
`;
